# LSPatch

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
core/app/: build.gradle.kts
core/core/: build.gradle.kts
core/core/libs/: libxposed_api.aar
core/core/src/main/java/io/github/libxposed/api/: XposedInterface.java  XposedInterfaceWrapper.java
core/core/src/main/jni/: CMakeLists.txt
core/core/src/main/jni/include/: elf_util.h
core/core/src/main/jni/src/: elf_util.cpp  symbol_cache.cpp
core/daemon/: build.gradle.kts
core/gradle/: libs.versions.toml
core/magisk-loader/: build.gradle.kts
gradle/: lspatch.versions.toml
gradle/wrapper/: gradle-wrapper.properties
manager/: build.gradle.kts
meta-loader/: build.gradle.kts
patch-loader/: build.gradle.kts  proguard-rules.pro
patch/libs/manifest-editor/lib/src/main/java/com/wind/meditor/base/: BaseCommand.java
patch/src/main/java/org/lsposed/patch/: LSPatch.java
